--- a/gamestyle.css
+++ b/gamestyle.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    background-color: rgb(52, 166, 52);
+    background-image: url(cards/images/image_3.jpg);
   }
   
   #dealer-cards img {
