--- a/gamestyle.css
+++ b/gamestyle.css
@@ -6,12 +6,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-}
+} /* Adding a blackjack backround table covering the entre page even when the user scrolls down */
 
 main {
   text-align: center;
   padding: 30px;
-}
+} /* Aligning the center */
 
 body main h2{
   border-style: solid;
